--- a/chat_page.css
+++ b/chat_page.css
@@ -757,9 +757,11 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: row;
+    width: 100%;
 }
 
 #online_contact_toggle_bar button {
+    /* border: 3px solid white; */
     position: relative;
     display: flex;
     justify-content: center;
@@ -772,6 +774,7 @@ body {
     border: none;
     cursor: pointer;
     height: 30px;
+    width: 100%;
     margin: 5px;
 }
 
